--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 						<h2>PROGRAM ANALYST TRAINEE</h2>
 						<span class="position">COGNIZANT TECHNOLOGY SOLUTIONS CORP,</span>
 						<span class="mt-4">Hyderabad</span>
-						<p class="mt-4">Cognizant, a leading CXM and media company with over 10K+ professionals globally. It's a part of Dentsu International. 
+						<p class="mt-4">Cognizant is a multinational IT services and consulting company known for providing digital, technology, consulting, and operations services. 
 							<ul>
 								<li>Supported project management at Cognizant using MS Office Suite and SharePoint for effective reports,
 									presentations, and document management.</li>
@@ -348,7 +348,7 @@
 						<h2>SUPPLY CHAIN OPTIMIZATION ASSISTANT</h2>
 						<span class="position">M/S K.H PIPE INDUSTRY,</span>
 						<span class="mt-4">Rayachoti</span>
-						<p class="mt-4">M/S K.H Pipe Industry is a data-driven digital marketing analytics and solutions company, helps top 100 global brands. 
+						<p class="mt-4">M/s Pipe Industry specializes in manufacturing and supplying pipes for various industrial applications. 
 							<ul>
 								<li>Collaborated with the Supply Chain Management team to optimize logistics and materials management for Pipe
 									manufacturing.</li>
