--- a/index.html
+++ b/index.html
@@ -468,8 +468,9 @@
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/Phatansadath024/StarlinkMap">Customer Segmentation using clustering model</a></h3>
-				  <p>Developed a ML model to give various recommendations of financial products &amp; services on target customer groups.</p>
+				  <h3 class="heading"><a href="https://github.com/Phatansadath024/StarlinkMap">Satillite internet Connection Avialabilty</a></h3>
+				  <p>Led data collection efforts for global satellite connection data, automating processing with SQL and visualizing
+insights with Python.</p>
 				</div>
 			  </div> 
 			</div> 
